dynamically load posts for community