@@ -48,16 +48,22 @@ public class DbInit implements CommandLineRunner {
 	}
 	
 	private void initCommunities() {
-		communityRepository.saveAll(Arrays.asList(new Community("Koty", "To jest community o kotach"),
-				new Community("Community z uzytkownikami", "Lorem ipsum dolor set amet",
-						new ArrayList<Long>(List.of((long) 1, (long) 2, (long) 6)),
-						new ArrayList<Long>(List.of((long) 2, (long) 1, (long) 3, (long) 7))),
-				new Community("Psy", "Tu sa psy")));
+		communityRepository.saveAll(Arrays.asList(
+				new Community("Koty", "To jest community o kotach", 
+						new ArrayList<Long>(List.of((long) 1, (long) 2, (long) 4)),
+						new ArrayList<Long>(List.of((long) 1, (long) 2, (long) 3, (long) 4, (long) 6))),
+				new Community("Psy", "Tu sa psy",
+						new ArrayList<Long>(List.of((long) 3, (long) 5)),
+						new ArrayList<Long>(List.of((long) 1, (long) 2, (long) 3, (long) 5)))));
 	}
 	
 	private void initPosts() {
-		postRepository.saveAll(Arrays.asList(new Post("Koty", "To jest post o kotach", (long) 1, (long) 1),
-				new Post("Psy", "Psy sa lepsze haha", (long) 1, (long) 2)));
+		postRepository.saveAll(Arrays.asList(
+				new Post("Post koty 1", "To jest post o kotach", (long) 1, (long) 1),
+				new Post("Post koty 2", "Psy sa lepsze", (long) 1, (long) 2),
+				new Post("Post koty 3", "Nie sa", (long) 1, (long) 1),
+				new Post("Post psy 1", "To jest post o psach", (long) 2, (long) 5),
+				new Post("Post psy 2", "Psy sa lepsze haha", (long) 2, (long) 3)));
 	}
 	
 	private void initComments() {
